set back color of main for homepage to placek to fill in addtl white space issue on some screen sizes

--- a/client/src/assets/css/Home.css
+++ b/client/src/assets/css/Home.css
@@ -6,6 +6,7 @@
     min-height: fit-content;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    background-color: black;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -14,7 +15,7 @@
   }
 
 video {
-    height: 100%;
+    height: 110%;
     width: 100%;
     object-fit: cover;
     margin: 0;
